--- a/app/package.json
+++ b/app/package.json
@@ -9,11 +9,14 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "d3-dsv": "^3.0.1",
+    "d3-time-format": "^4.1.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
+    "react-stockcharts": "^0.7.8",
     "sass": "^1.75.0",
     "web-vitals": "^2.1.4",
     "yahoo-finance2": "^2.11.1"
