--- a/app/package.json
+++ b/app/package.json
@@ -14,9 +14,9 @@
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.1.0",
+    "react-financial-charts": "^2.0.1",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
-    "react-stockcharts": "^0.7.8",
     "sass": "^1.75.0",
     "web-vitals": "^2.1.4",
     "yahoo-finance2": "^2.11.1"
