--- a/app/package.json
+++ b/app/package.json
@@ -15,6 +15,7 @@
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.1.0",
     "react-financial-charts": "^2.0.1",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.75.0",
