--- a/netlify.toml
+++ b/netlify.toml
@@ -1,4 +1,4 @@
 [build]
-  command = "npm run build"
+  command = "npm run build --ignore-warnings"
   publish = "build"
   functions = "server/functions"
