--- a/netlify.toml
+++ b/netlify.toml
@@ -2,3 +2,7 @@
   command = "npm run build --ignore-warnings"
   publish = "build"
   functions = "server/functions"
+
+
+[build.environment]
+  CI = "false"
