Forcing build to install dependencies

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "npm run build --ignore-warnings"
+  command = "cd server && npm install && cd ../ && npm run build --ignore-warnings"
   publish = "build"
   functions = "server/functions"
 
