--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-router-dom": "^6.22.3",
     "react-scripts": "^5.0.1",
     "sass": "^1.75.0",
+    "serverless-http": "^3.2.0",
     "web-vitals": "^2.1.4",
     "yahoo-finance2": "^2.11.1"
   },
@@ -49,5 +50,4 @@
       "last 1 safari version"
     ]
   }
-  
 }
