--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "axios": "^1.6.8",
     "bootstrap": "^5.3.3",
     "bootstrap-icons": "^1.11.3",
+    "chrome-aws-lambda": "^10.1.0",
     "cors": "^2.8.5",
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "express": "^4.19.2",
     "puppeteer": "^22.8.0",
+    "puppeteer-core": "^22.9.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.1.0",
