--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "express": "^4.19.2",
-    "puppeteer-core": "^22.9.0",
+    "puppeteer": "^22.9.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.1.0",
@@ -27,6 +27,9 @@
     "web-vitals": "^2.1.4",
     "yahoo-finance2": "^2.11.1"
   },
+  "externalDependencies": [
+    "puppeteer"
+  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build --ignore-warnings",
