--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@sparticuz/chromium": "^123.0.1",
+    "@sparticuz/chromium": "^113.0.1",
+    "puppeteer-core": "^20.1.1",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -14,7 +15,6 @@
     "d3-dsv": "^3.0.1",
     "d3-time-format": "^4.1.0",
     "express": "^4.19.2",
-    "puppeteer": "^22.9.0",
     "react": "^18.1.0",
     "react-bootstrap": "^2.10.2",
     "react-dom": "^18.1.0",
@@ -27,9 +27,6 @@
     "web-vitals": "^2.1.4",
     "yahoo-finance2": "^2.11.1"
   },
-  "externalDependencies": [
-    "puppeteer"
-  ],
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build --ignore-warnings",
